<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.movierecorder.InsertMovieActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="20sp"
        android:text="@string/insert_movie_textview" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:textSize="18sp"
        android:text="@string/title_textview"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText1"
        android:gravity="center"
        android:layout_width="300dp"
        android:inputType="text"
        android:ems="20"
        android:hint="@string/title_edittext"
        style="@style/generalStyle"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignStart="@+id/textView1"
        android:layout_toEndOf="@+id/textView2"
        android:layout_marginStart="42dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:text="@string/year_textview"
        android:layout_below="@+id/editText1"
        android:textSize="18sp"
        android:layout_alignStart="@+id/textView1" />

    <EditText
        android:id="@+id/editText2"
        android:gravity="center"
        android:layout_width="200dp"
        android:inputType="number"
        android:ems="20"
        android:hint="@string/year_edittext"
        style="@style/generalStyle"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignStart="@+id/saveButton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textSize="18sp"
        android:text="@string/rating_textview"
        android:layout_below="@+id/editText2"
        android:layout_alignStart="@+id/textView2" />


    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:isIndicator="false"
        android:numStars="10"
        android:rating="0"
        android:stepSize="1"
        android:scaleX="0.8"
        android:scaleY="0.8"
        style="@style/MyRatingBar"/>


    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:background="@color/colorAccent"
        android:textColor="#FFFFFF"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/ratingBar"
        android:layout_centerHorizontal="true"
        android:onClick="insertMovie"/>


</RelativeLayout>
