<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.movierecorder.EditMovieActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="20sp"
        android:text="@string/update_movie_textview" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:textSize="18sp"
        android:text="@string/title_textview"
        android:layout_below="@+id/textView1"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText1"
        android:gravity="center"
        android:layout_width="300dp"
        android:inputType="text"
        android:ems="20"
        android:hint="@string/title_edittext"
        style="@style/generalStyle"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:text="@string/year_textview"
        android:layout_below="@+id/editText1"
        android:textSize="18sp"
        android:layout_alignStart="@+id/textView1" />

    <EditText
        android:id="@+id/editText2"
        style="@style/generalStyle"
        android:layout_width="200dp"
        android:ems="20"
        android:gravity="center"
        android:hint="@string/year_edittext"
        android:inputType="number"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignEnd="@+id/editText1" />


    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OK"
        android:background="@color/colorAccent"
        android:textColor="#FFFFFF"
        android:layout_marginTop="65dp"
        android:onClick="editMovie"
        android:layout_below="@+id/editText2"
        android:layout_alignStart="@+id/editText1"
        android:layout_marginStart="72dp" />

</RelativeLayout>
